Fix sidebar dark mode

--- a/themes/SuiteP/css/SticCustom/CustomPalette.scss
+++ b/themes/SuiteP/css/SticCustom/CustomPalette.scss
@@ -7,4 +7,4 @@ $stic-main-bg: #f5f5f5;
 $stic-text: #353535;
 $stic-btn: $stic-text;
 $stic-sidebar: #353535;
-$stic-sidebar-text: rgb(245, 245, 245);
+$stic-sidebar-text:  #f5f5f5;
